Fixed about spacing on header

--- a/public/a/c/_header.scss
+++ b/public/a/c/_header.scss
@@ -57,11 +57,13 @@ header {
 .search-wrap{margin-top:121px;}
 .search-wrap.case-studies{margin-top: 0;}
 .search-wrap.blog{margin-top: 0;}
+.search-wrap.about{margin-top: 45px;}
 
 @media (max-width: 768px) {
 	.search-wrap{margin-top:0px;}
 	.search-wrap.case-studies{margin-top: 20px;}
 	.search-wrap.blog{margin-top: 20px;}
+	.search-wrap.about{margin-top: 20px;}
 }
 
 @media (min-width: 768px) and (max-width: 979px) {  
